# trellis-ai

./: LICENSE  README.md  pyproject.toml
tests/: test_core.py
trellis/: __init__.py  core.py
