[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trellis-ai"
version = "0.1.0"
description = "Lightweight, schema-driven guardrails for AI responses"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]

[project.urls]
Repository = "https://github.com/Layered-Labs/trellis-ai"

[tool.hatch.build.targets.wheel]
packages = ["trellis"]
